# metaDesignBot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  bot.py  docker-compose.yml  migrate_const.py  migrations.json  pyproject.toml  states.py
dataBase/: config.py
dataBase/models/: FeedbackModel.py  OrderModel.py  PropertyTypeModel.py  PropertyTypesModel.py  RealtyStatusTypeModel.py  RealtyTypeModel.py  RepairClassModel.py  RepairTypeModel.py  RoomTypeModel.py  ServiceTypeModel.py  UserModel.py  __init__.py
dataBase/repositories/: base.py  feedback.py  order.py  realty_type.py  realty_type_status.py  repair_type.py  user.py
dataBase/schemas/: order.py  realty_status_type.py  realty_type.py  repair_type.py  user.py
handlers/: __init__.py  aboutUs.py  designProject.py  moreInfo.py  orderConstructor.py  portfolio.py  repairCategories.py  start.py
keyboards/: calculateOrMenuKeyboard.py  createOrderKeyboard.py  infoKeyboard.py  phoneKeyboard.py  portfolioKeyboard.py  propertyTypeKeyboard.py  repairClassKeyboard.py  roomTypeKeyboard.py  startKeyboard.py
migrations/: 0001_migration_202411070326.py  0001_migration_202411071501.py  0001_migration_202503102035.py  0002_migration_202411070329.py  0003_migration_202411070330.py
misc/: consts.py  files.py  utils.py
