[tool.poetry]
name = "metadesignbot"
version = "0.1.0"
description = ""
authors = ["Egor <ekurlenko17@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
aiogram = "3.4.1"
peewee = "3.16.2"
peewee-async = {extras = ["mysql"], version = "^1.1.0"}
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
redis = "^5.0.7"
cryptography = "^43.0.1"
setuptools = "^75.3.0"
pymysql-pool = "^0.4.6"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
